GNOME Bugzilla – Bug 691677
Gtk Scale (slider) does not react in clicks outside the center line (trough) since 3.6
Last modified: 2013-01-14 15:20:59 UTC
In GTK 3.6, the slider/scale misbehaves if you don't click *exactly* on the scale's "trough". It does the behavior from previous GTK versions; when left-clicking, it doesn't make the slider "jump" to the position, it either does nothing or nudges the slider in some random direction. The trough is a very very small target to hit. As a user, I expect the clickable area to be the entire height of the widget, ie what is surrounded by the dashed lines when you focus/select the widget.
yeah, the fact that you have to hit the trough exactly is annoying. We should fix that.
Created attachment 233447 [details] [review] range: don't trim the trough rectange by the trough margin Commit e32da246a84492f02b4dac5a448bb46cb23d68b8 made GtkRange's trough respect the CSS margin property, but it also trimmed the box in which the trough reacts to click events by the margin. We still want to catch events in that area instead, and just make sure the margin is applied when drawing (which was already implemented by that commit). This commit reverts the parts of e32da246a84492f02b4dac5a448bb46cb23d68b8 that didn't involve drawing, fixing the bug.
Review of attachment 233447 [details] [review]: Much better behaviour.
Attachment 233447 [details] pushed as aa77cd6 - range: don't trim the trough rectange by the trough margin